--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
 	"devDependencies": {
 		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/adapter-static": "^3.0.5",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/eslint": "^9.6.0",
+		"@types/node": "^22.7.4",
 		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
@@ -31,10 +33,16 @@
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0",
 		"vite": "^5.0.3",
+		"vite-plugin-node-polyfills": "^0.22.0",
 		"vitest": "^2.0.0"
 	},
 	"type": "module",
 	"dependencies": {
+		"@noble/hashes": "^1.5.0",
+		"buffer": "^6.0.3",
+		"elapsed-time": "^0.0.1",
+		"ethereum-cryptography": "^3.0.0",
+		"fflate": "^0.8.2",
 		"svelte-i18n": "^4.0.0",
 		"txtwizard": "file:"
 	}
