--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 		"lint": "prettier --check . && eslint .",
 		"format": "prettier --write .",
 		"test:integration": "playwright test",
-		"test:unit": "vitest"
+		"test:unit": "vitest",
+		"postbuild": "npx svelte-sitemap --domain https://www.txtwizard.net --change-freq yearly --reset-time"
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.28.1",
@@ -30,6 +31,7 @@
 		"prettier-plugin-svelte": "^3.1.2",
 		"svelte": "^4.2.7",
 		"svelte-check": "^4.0.0",
+		"svelte-sitemap": "^2.6.0",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0",
 		"vite": "^5.0.3",
