Refactor nginx.conf to allow access to files without file extensions

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,14 +1,14 @@
-# nginx.conf
 server {
     listen 80;
     server_name www.txtwizard.net;
 
-    root /usr/share/nginx/html; # SSG 빌드된 파일의 경로
+    root /usr/share/nginx/html;
 
     index index.html;
 
+    # 파일 확장자를 생략해도 접근 가능하도록 설정
     location / {
-        try_files $uri $uri/ /index.html;
+        try_files $uri $uri.html $uri/ /index.html;
     }
 
     error_page 404 /index.html;
