--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"@noble/hashes": "^1.5.0",
 		"bs58": "^6.0.0",
 		"buffer": "^6.0.3",
+		"dayjs": "^1.11.13",
 		"elapsed-time": "^0.0.1",
 		"ethereum-cryptography": "^3.0.0",
 		"fflate": "^0.8.2",
