--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,8 @@
 server {
     listen 80;
     server_name www.txtwizard.net;
+    access_log /dev/stdout;
+    error_log /dev/stderr;
 
     root /usr/share/nginx/html;
 
