--- a/.github/workflows/build_and_push.yaml
+++ b/.github/workflows/build_and_push.yaml
@@ -1,10 +1,7 @@
 name: Build and Deploy
 
 on:
-  push:
-    branches: ["main"]
-    paths-ignore:
-      - "README.md"
+  workflow_dispatch:
 
 env:
   APP_NAME: txtwizard
