--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -20,6 +20,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Run ESLint Fix
+        run: npm run format
+
       - name: Run ESLint
         run: npm run lint
 
