fix: update workflow trigger to push on main branch and ignore specific paths

--- a/.github/workflows/build_and_push.yaml
+++ b/.github/workflows/build_and_push.yaml
@@ -1,7 +1,11 @@
 name: Build and Deploy
 
 on:
-  workflow_dispatch:
+  push:
+    branches: [ main ]
+    paths-ignore:
+      - 'docs/**'
+      - 'README.md'
 
 env:
   APP_NAME: txtwizard
