--- a/.github/workflows/build_and_push.yaml
+++ b/.github/workflows/build_and_push.yaml
@@ -52,6 +52,7 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v6
         with:
+          context: .
           platforms: linux/arm64
           push: true
           tags: ${{ env.REGISTRY }}/${{ env.APP_NAME }}:latest
